--- a/css/style.css
+++ b/css/style.css
@@ -48,5 +48,15 @@ html {
     display:flex;
     justify-content: center;
     font-size: 10vh;
-    
+    background: -webkit-linear-gradient( rgba(0,212,255,1) 35%, rgba(15,229,168,1) );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.tablette img{
+    display:flex;
+    margin: auto;
+    object-fit: contain;
+    max-width: 80%;
+    max-height: 80%;
 }
