--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {font-family: nordic;src: url(../fonts/vevey.ttf);}
 body{
   margin: 0;
-  background-color: #161616;
+  background-color: rgb(211, 157, 157);
   color: #fff;
   font-family: Helvetica, sans-serif;
   
@@ -22,6 +22,9 @@ html {
 
   .tablette{
       display: flex;
+      margin: auto;
+      max-width: 50%;
+      max-height: 50%;
       background-color: rgb(34, 33, 33);
       box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -57,6 +60,6 @@ html {
     display:flex;
     margin: auto;
     object-fit: contain;
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 50%;
+    max-height: 50%;
 }
