--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,10 @@ html {
     display:flex;
     justify-content: center;
     font-size: 10vh;
-    background: -webkit-linear-gradient( rgba(0,212,255,1) 35%, rgba(15,229,168,1) );
+    background: linear-gradient(to right, #fc5c7d, #6a82fb);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+      
 }
 
 .tablette img{
