--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {font-family: nordic;src: url(../fonts/vevey.ttf);}
 body{
   margin: 0;
-  background-color: rgb(211, 157, 157);
+  background-color: rgb(255, 255, 255);
   color: #fff;
   font-family: Helvetica, sans-serif;
   
@@ -53,7 +53,15 @@ html {
     font-size: 10vh;
     background: linear-gradient(to right, #fc5c7d, #6a82fb);
     -webkit-background-clip: text;
+    -o-background-clip: text;
+    -ms-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
+    -o-text-fill-color: transparent;
+    -ms-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    
       
 }
 
