--- a/css/styleVersion2.css
+++ b/css/styleVersion2.css
@@ -52,19 +52,9 @@ html {
     display:flex;
     justify-content: center;
     font-size: 10vh;
-    background: linear-gradient(to right, #fc5c7d, #6a82fb);
+    background: linear-gradient( #fc5c7d, #6a82fb);
     -webkit-background-clip: text;
-    -o-background-clip: text;
-    -ms-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -o-text-fill-color: transparent;
-    -ms-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    background: -webkit-gradient(to right, color-stop(50%,#fc5c7d), color-stop(50%,#6a82fb)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(to right,  #fc5c7d 50%,#6a82fb 50%); /* Chrome10+,Safari5.1+ */
-    
+    color: transparent;
 
 }
 
