--- a/css/styleVersion2.css
+++ b/css/styleVersion2.css
@@ -52,9 +52,19 @@ html {
     display:flex;
     justify-content: center;
     font-size: 10vh;
+    background-color: black;
     background: linear-gradient( #fc5c7d, #6a82fb);
     -webkit-background-clip: text;
-    color: transparent;
+    -o-background-clip: text;
+    -ms-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -o-text-fill-color: transparent;
+    -ms-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+
+    
 
 }
 
