--- a/css/styleVersion2.css
+++ b/css/styleVersion2.css
@@ -53,13 +53,15 @@ html {
     justify-content: center;
     font-size: 10vh;
     background-color: -webkit-linear-gradient(#fc5c7d, #6a82fb);
+    background-color: -moz-linear-gradient(#fc5c7d, #6a82fb);
+    background-color: -o-linear-gradient(#fc5c7d, #6a82fb);
+    background-color: -ms-linear-gradient(#fc5c7d, #6a82fb);
     background-color: black;
     background: linear-gradient( #fc5c7d, #6a82fb);
     -webkit-background-clip: text;
     -o-background-clip: text;
     -ms-background-clip: text;
     -moz-background-clip: text;
-    -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     -o-text-fill-color: transparent;
