--- a/css/styleVersion2.css
+++ b/css/styleVersion2.css
@@ -51,13 +51,15 @@ html {
     margin-top: 5vh;
     display:flex;
     justify-content: center;
+    align-items: center;
     font-size: 10vh;
-    color: rgb(49, 49, 49);
+    color: rgb(17, 89, 148);
 }
 
 .tablette img{
     display:flex;
     margin: auto;
+    padding-bottom:50px;
     object-fit: contain;
     max-width: 50%;
     max-height: 50%;
