--- a/css/styleVersion2.css
+++ b/css/styleVersion2.css
@@ -48,7 +48,7 @@ html {
     } 
 
 .title{
-    margin-top: 5vh;
+    margin-top: 5vh auto;
     display:flex;
     justify-content: center;
     align-items: center;
