--- a/css/frameMain.css
+++ b/css/frameMain.css
@@ -3,7 +3,7 @@
       display: flex;
       margin: auto;
       max-width: 50%;
-      max-height: 50%;
+      max-height: 50%; 
       background-color: rgb(34, 33, 33);
       box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -11,10 +11,11 @@
       border:solid black 12px ;
       border-radius: 30px;
       box-shadow: 20px 9px 25px rgb(20, 20, 20);
+      transition:all 3s;
   }
 
   .accueil{
-      display:absolute;
+      display:none;
   }
  .backgroundScroll {
     position: relative;
@@ -37,8 +38,10 @@
 .tablette img{
     display:flex;
     margin: auto;
-    padding-bottom:50px;
     object-fit: contain;
     max-width: 50%;
     max-height: 50%;
+}
+.tablette.animate{
+    transform: scale(3.5);
 }
