--- a/css/general.css
+++ b/css/general.css
@@ -4,6 +4,7 @@ body{
   background-color: rgb(202, 202, 202);
   color: #fff;
   font-family: Helvetica, sans-serif;
+  overflow:hidden;
   
 }
 h1{  
