--- a/css/frameEcranAccueil.css
+++ b/css/frameEcranAccueil.css
@@ -51,6 +51,7 @@
     margin:0 1vw 5vw 0;
     
     
+    
 }
 .number{
     width:auto;
@@ -58,5 +59,10 @@
     justify-content: center;
     z-index:2;
     font-size: 50px;
-    
+   
+}
+.number p{
+    height: 0;
+    margin:0 0 60px 0;
+    cursor: pointer;
 }
