--- a/css/general.css
+++ b/css/general.css
@@ -4,8 +4,12 @@ body{
   background-color: rgb(202, 202, 202);
   color: #fff;
   font-family: Helvetica, sans-serif;
-  overflow:none;
+  overflow-x:hidden;
+  overflow-y:hidden;
   
+}
+body{
+  position:relative;
 }
 h1{  
     position: absolute;
