--- a/css/frameEcranAccueil.css
+++ b/css/frameEcranAccueil.css
@@ -70,3 +70,11 @@
     margin:0 0 60px 0;
     cursor: pointer;
 }
+
+.tryTxt{
+    display:flex;
+    justify-content: center;
+    margin-bottom: 2vh;
+    font-size:1.5vh;
+    color:black;
+}
