--- a/css/frameEcranAccueil.css
+++ b/css/frameEcranAccueil.css
@@ -3,7 +3,7 @@
     width:100vw;
     height:100vh;
     flex-direction: column;
-    justify-content: space-around ;
+    justify-content: space-around;
     overflow: hidden;
 }
 
@@ -52,9 +52,7 @@
     border: solid;
     border-radius: 50%;
     z-index:2;
-    margin:0 1vw 5vw 0;
-    
-    
+    margin:0 1vw 5vw 0;   
     
 }
 .number{
@@ -69,6 +67,7 @@
     height: 0;
     margin:0 0 60px 0;
     cursor: pointer;
+    user-select: none;
 }
 
 .tryTxt{
