--- a/css/frameEcranApplication.css
+++ b/css/frameEcranApplication.css
@@ -32,19 +32,18 @@
     }
 
 .applicationsTop{
-    display: grid;
+    display: flex;
     justify-items: center;
     height:73vh;
     width:90vw;
-    grid-template-columns: repeat(auto-fill,25%);
     overflow: scroll;
     z-index: 1;
 }
 .applicationsBottom{
     display:flex;
     justify-content: center;
-    height:10vh;
-    width: 90vw;
+    height:90px;
+    width: 95vw;
     background-color: rgba(255, 255, 255, 0.2);
     margin-bottom: 5vh;
     border-radius: 0.7em;   
@@ -54,29 +53,32 @@
 .application{
     display:flex;
     flex-direction: column;
-    width: 20vw;
-    height:22vw;
     margin: 1vh 2vw ;
     
 }
 .application1,.application2,.application3,.application4,.application5,.application6,.application7,.application8,.application9,.application10,.application11,.application12,.application13,.application14,.application15,.application16,.application17,.application18{
     background-color: rgba(0, 0, 0, 0.712);
     border-radius: 0.7em;
-    height:83vh;
+    width: 60px;
+    height: 60px;
     margin: 1vh;
+    cursor: pointer;
 }
 
 .applicationTitle1,.applicationTitle2,.applicationTitle3,.applicationTitle4,.applicationTitle5,.applicationTitle6,.applicationTitle7,.applicationTitle8,.applicationTitle9,.applicationTitle10,.applicationTitle11,.applicationTitle12,.applicationTitle13,.applicationTitle14,.applicationTitle15,.applicationTitle16,.applicationTitle17,.applicationTitle18{
-    background-color: rgb(165, 129, 123);
-    height:15vh;
-    margin: 0 1vh;
+    height: 10px;
+    text-align: center;
+    color: whitesmoke;
+    font-size: 2vh;
+    opacity: 0.8;
+    
 }
 .applicationBottom{
     display:flex;
     flex-direction: column;
-    width: 9vh;
-    height:9vh;
-    margin: 0 2vw ;
+    width: 70px;
+    height:75px;
+    margin: 0 2vw 1vh 2vw ;
     
 }
 .applicationB1,.applicationB2,.applicationB3,.applicationB4{
@@ -84,10 +86,11 @@
     border-radius: 0.7em;
     height:83vh;
     margin: 1vh;
+    cursor: pointer;
 }
 .applicationBTitle1,.applicationBTitle2,.applicationBTitle3,.applicationBTitle4{
     background-color: rgb(165, 129, 123);
-    height:10vh;
+    height:100px;
     margin: 0 1vh;
 }
 /* Desktop */
@@ -96,16 +99,14 @@
         width: 50vw;
         height:14vh;
     }
-    .applicationsTop{
-        grid-template-columns: repeat(auto-fill,20%);
-    }
-    .application{
-        width:7vw;
-        height:8vw;
+    
+    .application1,.application2,.application3,.application4,.application5,.application6,.application7,.application8,.application9,.application10,.application11,.application12,.application13,.application14,.application15,.application16,.application17,.application18{
+        width: 70px;
+        height: 70px;
     }
     .applicationBottom{
-        width:10vh;
-        height:11vh
+        width:70px;
+        height:70px;
     }
 }
 
@@ -114,23 +115,11 @@
     .applicationsBottom{
         width: 70vw; 
     }
-    .application{
-        width:12vw;
-        height:13vw;
-    }
-    .applicationsTop{
-        grid-template-columns: repeat(auto-fill,20%);
-    }
+    
 }
 
 @media screen and (min-width: 525px) and (max-width:727px){
-    .application{
-        width: 15vw;
-        height:16vw;
-    }
-    .applicationBottom{
-        width:9vh;
-        height:9vh
-    }
+   
+
 }
 
