--- a/css/frameEcranProjets.css
+++ b/css/frameEcranProjets.css
@@ -8,12 +8,83 @@
 }
 .partieTopNavigationInternet{
     width:100vw;
-    height:50px;
+    height:30px;
     background-color: rgb(65, 65, 65);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.partieTopNavigationInternet img{
+    margin: 0 1px 0 10px;
+    height:15px;
+    cursor: pointer;
+}
+.fleche-droite,.fleche-gauche-gris{
+    display: none;
 }
 .titleSite{
-    width:200px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    padding: 0 15px;
+    width:10%;
+    min-width: 200px;
     height: 25px;
     background-color: rgb(65, 65, 65);
     border-top-right-radius: 1em;
+    z-index: 1;
+    font-size: 10px;
+    font-weight:bold;
+}
+.fermerProjets{
+    height:10px;
+    cursor: pointer;
+    
+}
+.croix2{
+    margin-right: 10px;
+}
+.topPage{
+    width:100%;
+    height: 25px;
+    background-color: rgb(44, 44, 44);
+    z-index:2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.imgWifi{
+    width: 3vh;
+    margin-left: 10px; ;
+}
+.notifications2{
+    display: flex;
+        justify-content:flex-end;
+        padding-right: 5vh;
+        align-items: center;
+        height:5vh;
+        width:99vw;
+        background-color: rgba(0, 0, 0, 0.5);
+        font-size: 2vh;
+        z-index: 1;
+}
+.url{
+    display: flex;
+    background-color: whitesmoke;
+    color: black;
+    border-radius:4px ;
+    padding: 1px 4px;
+    width: 70vw;
+    margin-right: 5px;
+    overflow-x: overlay;
+    height: 17px;
+    font-size: 14px;
+}
+.cadenas{
+    margin-right: 5px;
+}
+@media screen and (min-width:866px) {
+    .url{
+        width:83vw;
+    }
 }
