--- a/css/frameEcranProjets.css
+++ b/css/frameEcranProjets.css
@@ -100,10 +100,8 @@
     display: flex;
     flex-direction: column;
     width:98vw;
-    height: 500px;
     flex-flow: wrap;
     justify-content: center;
-
 }
 .partieBottomNavigationInternet p{
     width: 98vw;
@@ -111,7 +109,7 @@
     font-size: 5em;
 }
 .card{
-    width:90vw;
+    width:300px;
     height:320px;
     margin: 0 10px 10px 10px;
     display: flex;
@@ -122,15 +120,32 @@
     overflow: hidden;
     background-color:rgba(128, 128, 128, 0.637);
     box-shadow: 10px 5px 5px black;
+    border-radius: 5px;
     border: none;
+    cursor: pointer;
 
-   
+}
+.blocRougeDisquette{
+    position: absolute;
+    top:0;
+    width: 170px;
+    height: 24px;
+    background-color: red;
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 10px;
+    color: #fff;
+    border-top-left-radius: 5px ;
+    border-top-right-radius: 5px ;
 }
 .blocGrisDisquette{
     position:absolute;
+    display: flex;
+    flex-direction: column;
     width: 180px;
     height:130px;
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.932);
+    box-shadow: inset 1px 0px 3px rgb(109, 109, 109);
     top:0;
     text-align: center;
     border: none;
@@ -152,19 +167,37 @@
 .blocRougeEtBlancDisquette{
     position: absolute;
     width:180px;
-    height:160px;
-    bottom:0;
+    height:155px;
+    bottom:10px;
     background-color: #fff;
+    border-radius: 5px;
+    
+}
+.projetsMain{
+    display: flex;
+    flex-direction: column;}
+.blocRougeEtBlancDisquette p {
+    position: absolute;
+    text-align: center;
+    font-size: medium;
+    color: black;
+    width: 175px;
+    top:24.1px;
+}
+.glpi,.laFleur,.gsbJava,.gsbSymfony{
+    display: none;
+    flex-direction: column;
+    width:98vw;
+    height: 100px;
+    background-color: aqua;
+    flex-flow: wrap;
+    justify-content: center;
 }
 
 @media screen and (min-width:866px) {
     .url{
         width:83vw;
     }
-    .card{
-        width:250px;
-    }
-    
     .logoSVGProjet{
         display: flex;
     }
