--- a/css/frameEcranProfil.css
+++ b/css/frameEcranProfil.css
@@ -16,6 +16,10 @@
     margin: 50px 0 0 0;
     flex-direction: column;
 }
+.croixContact{
+    display:flex;
+    margin-right: 10px;
+}
 .identite{
     display: flex;
     flex-direction: column;
@@ -46,6 +50,12 @@
 .tableauInformation tr{
     display: flex;
     flex-direction: column;
+}
+.frame-profil-bottom{
+    height: 95vh;
+    overflow-y: scroll;
+    color: black;
+    
 }
 
 @media screen and (min-width:640px) {
