--- a/css/frameMain.css
+++ b/css/frameMain.css
@@ -4,7 +4,18 @@
     padding-top: 25vh;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
 }
+.frameMain p{
+    position: absolute;
+    top:10px;
+    color:orangered; 
+    left: 2vw;
+    text-align:center; 
+    font-weight: 900;
+    font-size: 25px;
+}
+
 .tablette{
       display: flex;
       margin: auto;
