--- a/css/frameEcranCV.css
+++ b/css/frameEcranCV.css
@@ -11,15 +11,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 
 .container {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 100px 0;
-  background-color: #111;
-  overflow-y: scroll;
-  
+  min-height: 40vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #111;
+    overflow-y: scroll;
+    margin: 87px 0;
 }
 .PartieBottomCV{
     overflow-y: scroll;
