--- a/css/frameEcranProfil.css
+++ b/css/frameEcranProfil.css
@@ -16,14 +16,12 @@
     margin: 50px 0 0 0;
     flex-direction: column;
 }
-.croixContact{
-    display:flex;
-    margin-right: 10px;
-}
+
 .identite{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: cadetblue;
 }
 .photoIlan{
     border-radius: 180px;
@@ -40,7 +38,12 @@
     font-size: 20px;
     margin-top: 10px;
     justify-content: center;
-    background-color: rgb(49, 47, 47);;
+    background-color: rgb(49, 47, 47);
+    color: #b5f2f4;
+}
+.tableauInformation td:nth-child(1){
+    background-color: rgba(29, 27, 27, 0.623);
+    color: whitesmoke;
 }
 .informationsIdentite table{
     text-align: center;
