--- a/css/frameEcranCV.css
+++ b/css/frameEcranCV.css
@@ -63,6 +63,39 @@
   margin-bottom: 10px;
   letter-spacing: 2px;
 }
+.skills{
+  display: flex;
+  justify-content: space-around;
+  margin: 30px auto;
+  width: 90vw;
+  background-color: #27282b;
+  border-radius: 15px;
+}
+.logiciel,.web{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+.library img{
+  height: 8vh;
+}
+.web table{
+  color: white;
+  width: 90vw;
+  margin: 30px auto;
+  text-align: center;
+}
+.web p{
+  text-align: initial;
+  padding-left: 8px;
+}
+.web img{
+  text-align: right;
+  padding-right: 8px;
+}
+.img-logo{
+  text-align: end;
+}
 @media only screen and (min-width: 768px) {
   .timeline:before {
     content: "";
@@ -115,5 +148,12 @@
   .timeline ul li:hover::before {
     background-color: aqua;
   }
+  .logiciel,.web{
+    flex-direction: row;
+  }
+  .web table{
+    width: 40vw;
+  }
+ 
 }
 
